fixed projects page spacing

--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ ul {
     grid-template-rows: 7vw repeat(4, 250px) 4.75vw; 
   }
 
+  #projectssitebox.sitebox {
+    grid-template-rows: 7vw repeat(2, 280px) 1px 1px 4.75vw; 
+  }
+
   .navbar {
     grid-column-start: 1;
     grid-column-end: 2;
